[gd_scene load_steps=12 format=3 uid="uid://b244gn2vt2ub5"]

[ext_resource type="Script" path="res://Scene/Script/SceneCaféteria.gd" id="1_bas3f"]
[ext_resource type="PackedScene" uid="uid://b0j3mf6qxgahd" path="res://Carte/CarteScene/MapCaféteria.tscn" id="1_xcnvx"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="2_nnqcu"]
[ext_resource type="PackedScene" uid="uid://i0y3uc5jfcuj" path="res://UI/menu_pause.tscn" id="4_8vdj3"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="4_ymmxf"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="5_eoc8e"]
[ext_resource type="Texture2D" uid="uid://ksn4pov16pq" path="res://UI/image/café.png" id="7_57ya3"]
[ext_resource type="FontFile" uid="uid://dk537wexvu7ax" path="res://UI/SFPixelate.ttf" id="8_kot7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xouj7"]
size = Vector2(203, 28)

[sub_resource type="LabelSettings" id="LabelSettings_fk3uk"]
font = ExtResource("8_kot7n")
font_size = 13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufqsc"]
size = Vector2(136, 15)

[node name="SceneCaféteria" type="Node2D"]
script = ExtResource("1_bas3f")

[node name="MapCaféteria" parent="." instance=ExtResource("1_xcnvx")]
position = Vector2(331, 101)
scale = Vector2(1.4, 1.4)

[node name="ZoneVente2" type="Area2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneVente2"]
position = Vector2(219, 154)
shape = SubResource("RectangleShape2D_xouj7")

[node name="F" type="Sprite2D" parent="ZoneVente2"]
visible = false
position = Vector2(532, 26)
scale = Vector2(2.46875, 2.4375)
texture = ExtResource("5_eoc8e")
hframes = 8
vframes = 14
frame = 21

[node name="ZoneVente" type="Area2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneVente"]
position = Vector2(537, 154)
shape = SubResource("RectangleShape2D_xouj7")

[node name="F" type="Sprite2D" parent="ZoneVente"]
visible = false
position = Vector2(216, 26)
scale = Vector2(2.46875, 2.4375)
texture = ExtResource("5_eoc8e")
hframes = 8
vframes = 14
frame = 21

[node name="MenuCafeteria" type="CanvasLayer" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="MenuCafeteria" instance=ExtResource("4_ymmxf")]
scale = Vector2(2, 2)
layer_0/tile_data = PackedInt32Array(393229, 131072, 0, 458765, 196608, 1, 393230, 65536, 0, 458766, 65536, 1, 393237, 131072, 0, 458773, 524288, 1, 393238, 131072, 0, 458774, 65536, 1, 393231, 65536, 0, 458767, 65536, 1, 393232, 131072, 0, 458768, 131072, 1, 393233, 196608, 0, 458769, 196608, 1, 393234, 65536, 0, 458770, 65536, 1, 393235, 131072, 0, 458771, 131072, 1, 393236, 196608, 0, 458772, 196608, 1, 720909, 196608, 1, 786445, 720896, 1, 720910, 851968, 0, 786446, 851968, 1, 720911, 655360, 0, 786447, 655360, 1, 720912, 720896, 0, 786448, 720896, 1, 720913, 655360, 0, 786449, 655360, 1, 720914, 720896, 0, 786450, 720896, 1, 720915, 655360, 0, 786451, 655360, 1, 720916, 720896, 0, 786452, 720896, 1, 720917, 0, 12, 786453, 0, 13, 720918, 65536, 1, 786454, 0, 13, 655381, 0, 12, 655382, 65536, 1, 589845, 0, 12, 589846, 65536, 1, 524309, 0, 12, 524310, 65536, 1, 524302, 0, 12, 524303, 0, 12, 589839, 0, 12, 589840, 0, 12, 589841, 0, 12, 655377, 0, 12, 655378, 0, 12, 655379, 0, 12, 655374, 0, 12, 524305, 0, 12, 524306, 0, 12, 524307, 0, 12, 524308, 0, 12, 589844, 0, 12, 589843, 0, 12, 589842, 0, 12, 524304, 0, 12, 655376, 0, 12, 655375, 0, 12, 589838, 0, 12, 655380, 0, 12, 655373, 196608, 1, 589837, 196608, 1, 524301, 196608, 1, 393227, 0, 0, 458763, 0, 1, 393228, 131072, 0, 458764, 131072, 1, 524300, 131072, 1, 589836, 131072, 1, 655372, 131072, 1, 720908, 851968, 0, 786444, 851968, 1, 393239, 524288, 0, 458775, 524288, 1, 393240, 589824, 0, 458776, 589824, 1, 720919, 0, 12, 655383, 65536, 1, 589847, 65536, 1, 524311, 65536, 1, 524312, 589824, 1, 589848, 589824, 1, 655384, 589824, 1, 720920, 65536, 12, 720907, 786432, 0, 786443, 786432, 1, 655371, 262144, 0, 589835, 262144, 0, 524299, 262144, 0, 786455, 0, 13, 786456, 65536, 13)

[node name="IconCafé" type="Sprite2D" parent="MenuCafeteria"]
texture_filter = 1
position = Vector2(402, 238)
scale = Vector2(2.5, 2.61111)
texture = ExtResource("7_57ya3")

[node name="Label" type="Label" parent="MenuCafeteria"]
offset_left = 455.0
offset_top = 225.0
offset_right = 639.0
offset_bottom = 257.0
text = "Boison énergique : 
retire 2h à ta journée."
label_settings = SubResource("LabelSettings_fk3uk")

[node name="Button" type="Button" parent="MenuCafeteria"]
offset_left = 660.0
offset_top = 227.0
offset_right = 769.0
offset_bottom = 258.0
text = "Acheter : 20$"

[node name="Joueur" parent="." instance=ExtResource("2_nnqcu")]
position = Vector2(538, 534)
scale = Vector2(1.6, 1.6)

[node name="Porte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porte"]
position = Vector2(533, 636)
shape = SubResource("RectangleShape2D_ufqsc")

[node name="MenuPause" parent="." instance=ExtResource("4_8vdj3")]
position = Vector2(34, 11)

[connection signal="acheterCafé" from="." to="Joueur" method="_on_scene_caféteria_acheter_café"]
[connection signal="body_entered" from="ZoneVente2" to="." method="_on_zone_vente_2_body_entered"]
[connection signal="body_exited" from="ZoneVente2" to="." method="_on_zone_vente_2_body_exited"]
[connection signal="body_entered" from="ZoneVente" to="." method="_on_zone_vente_body_entered"]
[connection signal="body_exited" from="ZoneVente" to="." method="_on_zone_vente_body_exited"]
[connection signal="pressed" from="MenuCafeteria/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Porte" to="." method="_on_porte_body_entered"]
[connection signal="sauvegarder" from="MenuPause" to="Joueur" method="_on_menu_pause_sauvegarder"]
